--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^16.2.0",
     "angular-animations": "^0.11.0",
     "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.2",
     "jquery": "^3.7.1",
     "ngx-toastr": "^17.0.2",
     "popper.js": "^1.16.1",
@@ -31,6 +32,7 @@
     "@angular-devkit/build-angular": "^16.2.10",
     "@angular/cli": "^16.2.10",
     "@angular/compiler-cli": "^16.2.0",
+    "@types/bootstrap": "^5.2.10",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
