--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "start-server": "json-server --watch db.json --routes routes.json --port=3000",
+    "dev": "npm-run-all -p start start-server",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -20,7 +22,7 @@
     "@angular/router": "^16.2.0",
     "angular-animations": "^0.11.0",
     "bootstrap": "^5.3.2",
-    "bootstrap-icons": "^1.11.2",
+    "bootstrap-icons": "^1.11.3",
     "jquery": "^3.7.1",
     "ngx-toastr": "^17.0.2",
     "popper.js": "^1.16.1",
@@ -40,6 +42,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "npm-run-all": "^4.1.5",
     "typescript": "~5.1.3"
   }
 }
